--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,14 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="placeHolder">Wprowadź miasto</string>
+    <string name="city">Miasto</string>
+    <string name="sky" />
+    <string name="min_temp">"Min temp: "</string>
+    <string name="max_temp">Max temp:</string>
+    <string name="sunrise">Wschód słońca</string>
+    <string name="sunset">Zachód słońca</string>
+    <string name="wind">Prędkość wiatru</string>
+    <string name="pressure">Ciśnienie</string>
+    <string name="humidity">Wilgotność</string>
+    <string name="feel_like">Temp odczuwalna</string>
 </resources>
